--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1217,11 +1217,11 @@
     "\n",
     "meanAge = df_train4['Age'].mean()\n",
     "df_train4['Age'] = df_train4['Age'].fillna(meanAge) #заполянем не указанные возрасты средними значениями\n",
-    "meanAge = df_train4['numCab'].mean()\n",
+    "meanCab = df_train4['numCab'].mean()\n",
     "\n",
     "df_train4['numCab'] = df_train4['numCab'].fillna(0) #неуказанные номера кабины указываем явным для нас видом как 0\n",
     "df_train4['Embarked'] = df_train4['Embarked'].fillna(\"S\")\n",
-    "df_train4['Sex'] = df_train4['Sex'].map({'male':0, 'female':1})#пол меням в цифровой вид\n",
+    "df_train4['Sex'] = df_train['Sex'].map({'male':0, 'female':1})#пол меням в цифровой вид\n",
     "df_train4['sector'] =  df_train4['sector'].map({'X':0, 'A':1, 'B':2, 'C':3, 'D':4, 'E':5, 'F':6, 'G':7, 'T':8})\n",
     "\n",
     "df_train4.head()"
