--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -727,13 +727,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Пример текста  $$ \\lim\\limits_{n \\to 0}x^n = 1$$"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1225,6 +1218,13 @@
     "df_train4['sector'] =  df_train4['sector'].map({'X':0, 'A':1, 'B':2, 'C':3, 'D':4, 'E':5, 'F':6, 'G':7, 'T':8})\n",
     "\n",
     "df_train4.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "При   $$ \\lim\\limits_{n \\to 0}x^n = 1$$"
    ]
   },
   {
