--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -981,46 +981,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     PassengerId  Survived  Pclass  \\\n",
-      "292          293         0       2   \n",
-      "327          328         1       2   \n",
-      "473          474         1       2   \n",
-      "\n",
-      "                                             Name  Sex   Age  SibSp  Parch  \\\n",
-      "292                        Levy, Mr. Rene Jacques    0  36.0      0      0   \n",
-      "327                       Ball, Mrs. (Ada E Hall)    1  36.0      0      0   \n",
-      "473  Jerwan, Mrs. Amin S (Marie Marthe Thuillard)    1  23.0      0      0   \n",
-      "\n",
-      "              Ticket     Fare Cabin Embarked  prediction sector numCab  \n",
-      "292    SC/Paris 2163  12.8750     D        C           0      D         \n",
-      "327            28551  13.0000     D        S           1      D         \n",
-      "473  SC/AH Basle 541  13.7917     D        C           1      D         \n"
+      "sector\n",
+      "A     15\n",
+      "B     47\n",
+      "C     59\n",
+      "D     33\n",
+      "E     33\n",
+      "F      9\n",
+      "G      7\n",
+      "T      1\n",
+      "X    687\n",
+      "dtype: int64\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>numCab</th>\n",
+       "      <th>sector</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>293</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Levy, Mr. Rene Jacques</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SC/Paris 2163</td>\n",
+       "      <td>12.8750</td>\n",
+       "      <td>D</td>\n",
+       "      <td>C</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327</th>\n",
+       "      <td>328</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Ball, Mrs. (Ada E Hall)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28551</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>D</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>473</th>\n",
+       "      <td>474</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Jerwan, Mrs. Amin S (Marie Marthe Thuillard)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SC/AH Basle 541</td>\n",
+       "      <td>13.7917</td>\n",
+       "      <td>D</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "sector\n",
-       "A     15\n",
-       "B     47\n",
-       "C     59\n",
-       "D     33\n",
-       "E     33\n",
-       "F      9\n",
-       "G      7\n",
-       "T      1\n",
-       "X    687\n",
-       "dtype: int64"
+       "     PassengerId  Survived  Pclass  \\\n",
+       "292          293         0       2   \n",
+       "327          328         1       2   \n",
+       "473          474         1       2   \n",
+       "\n",
+       "                                             Name  Sex   Age  SibSp  Parch  \\\n",
+       "292                        Levy, Mr. Rene Jacques  NaN  36.0      0      0   \n",
+       "327                       Ball, Mrs. (Ada E Hall)  NaN  36.0      0      0   \n",
+       "473  Jerwan, Mrs. Amin S (Marie Marthe Thuillard)  NaN  23.0      0      0   \n",
+       "\n",
+       "              Ticket     Fare Cabin Embarked  prediction numCab sector  \n",
+       "292    SC/Paris 2163  12.8750     D        C           0             D  \n",
+       "327            28551  13.0000     D        S           1             D  \n",
+       "473  SC/AH Basle 541  13.7917     D        C           1             D  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,15 +1127,15 @@
     "df_train3.Cabin = df_train3.Cabin.str.extract(r'(?P<Cabin>\\D\\d{0,3}$)', expand = False)\n",
     "\n",
     "df_train3[['sector', 'numCab']] = df_train3.Cabin.str.extract(r'(?P<sector>^\\D)(?P<numCab>\\d{0,3}$)', expand = False)\n",
-    "print(df_train3[df_train3.Cabin == 'D'])\n",
     "\n",
-    "df_train3.groupby('sector').size()\n",
-    "#plt.hist()\n"
+    "print(df_train3.groupby('sector').size())\n",
+    "#plt.hist()\n",
+    "df_train3[df_train3.Cabin == 'D']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1077,8 +1172,8 @@
        "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
        "      <th>prediction</th>\n",
-       "      <th>sector</th>\n",
        "      <th>numCab</th>\n",
+       "      <th>sector</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1088,7 +1183,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>22.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1097,7 +1192,7 @@
        "      <td>X0</td>\n",
        "      <td>S</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1106,7 +1201,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>38.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1115,8 +1210,8 @@
        "      <td>C85</td>\n",
        "      <td>C</td>\n",
        "      <td>1</td>\n",
+       "      <td>85.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1124,7 +1219,7 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>26.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1133,7 +1228,7 @@
        "      <td>X0</td>\n",
        "      <td>S</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1142,7 +1237,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>35.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1151,8 +1246,8 @@
        "      <td>C123</td>\n",
        "      <td>S</td>\n",
        "      <td>1</td>\n",
+       "      <td>123.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>123</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1160,7 +1255,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>35.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1169,7 +1264,7 @@
        "      <td>X0</td>\n",
        "      <td>S</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1185,21 +1280,21 @@
        "4            5         0       3   \n",
        "\n",
        "                                                Name  Sex   Age  SibSp  Parch  \\\n",
-       "0                            Braund, Mr. Owen Harris  NaN  22.0      1      0   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  NaN  38.0      1      0   \n",
-       "2                             Heikkinen, Miss. Laina  NaN  26.0      0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  NaN  35.0      1      0   \n",
-       "4                           Allen, Mr. William Henry  NaN  35.0      0      0   \n",
+       "0                            Braund, Mr. Owen Harris    0  22.0      1      0   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...    1  38.0      1      0   \n",
+       "2                             Heikkinen, Miss. Laina    1  26.0      0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)    1  35.0      1      0   \n",
+       "4                           Allen, Mr. William Henry    0  35.0      0      0   \n",
        "\n",
-       "             Ticket     Fare Cabin Embarked  prediction  sector numCab  \n",
-       "0         A/5 21171   7.2500    X0        S           0       0      0  \n",
-       "1          PC 17599  71.2833   C85        C           1       3     85  \n",
-       "2  STON/O2. 3101282   7.9250    X0        S           1       0      0  \n",
-       "3            113803  53.1000  C123        S           1       3    123  \n",
-       "4            373450   8.0500    X0        S           0       0      0  "
+       "             Ticket     Fare Cabin Embarked  prediction  numCab  sector  \n",
+       "0         A/5 21171   7.2500    X0        S           0     0.0       0  \n",
+       "1          PC 17599  71.2833   C85        C           1    85.0       3  \n",
+       "2  STON/O2. 3101282   7.9250    X0        S           1     0.0       0  \n",
+       "3            113803  53.1000  C123        S           1   123.0       3  \n",
+       "4            373450   8.0500    X0        S           0     0.0       0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,9 +1305,13 @@
     "\n",
     "meanAge = df_train4['Age'].mean()\n",
     "df_train4['Age'] = df_train4['Age'].fillna(meanAge) #заполянем не указанные возрасты средними значениями\n",
-    "meanCab = df_train4['numCab'].mean()\n",
     "\n",
-    "df_train4['numCab'] = df_train4['numCab'].fillna(0) #неуказанные номера кабины указываем явным для нас видом как 0\n",
+    "meanCab = df_train3['numCab'].map(pd.to_numeric).mean()\n",
+    "df_train4.numCab = df_train4.numCab.map(pd.to_numeric)\n",
+    "\n",
+    "#df_train4.numCab =  df_train4.numCab.map({0.0:meanCab}) #неуказанные номера кабины указываем явным для нас видом как среднее значение от всех кабин\n",
+    "df_train4['numCab'] = df_train4['numCab'].fillna(meanCab)\n",
+    "\n",
     "df_train4['Embarked'] = df_train4['Embarked'].fillna(\"S\")\n",
     "df_train4['Sex'] = df_train['Sex'].map({'male':0, 'female':1})#пол меням в цифровой вид\n",
     "df_train4['sector'] =  df_train4['sector'].map({'X':0, 'A':1, 'B':2, 'C':3, 'D':4, 'E':5, 'F':6, 'G':7, 'T':8})\n",
@@ -1225,6 +1324,134 @@
    "metadata": {},
    "source": [
     "При   $$ \\lim\\limits_{n \\to 0}x^n = 1$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>numCab</th>\n",
+       "      <th>sector</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>293</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Levy, Mr. Rene Jacques</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SC/Paris 2163</td>\n",
+       "      <td>12.8750</td>\n",
+       "      <td>D</td>\n",
+       "      <td>C</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.465614</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327</th>\n",
+       "      <td>328</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Ball, Mrs. (Ada E Hall)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28551</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>D</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.465614</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>473</th>\n",
+       "      <td>474</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Jerwan, Mrs. Amin S (Marie Marthe Thuillard)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SC/AH Basle 541</td>\n",
+       "      <td>13.7917</td>\n",
+       "      <td>D</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.465614</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  Survived  Pclass  \\\n",
+       "292          293         0       2   \n",
+       "327          328         1       2   \n",
+       "473          474         1       2   \n",
+       "\n",
+       "                                             Name  Sex   Age  SibSp  Parch  \\\n",
+       "292                        Levy, Mr. Rene Jacques    0  36.0      0      0   \n",
+       "327                       Ball, Mrs. (Ada E Hall)    1  36.0      0      0   \n",
+       "473  Jerwan, Mrs. Amin S (Marie Marthe Thuillard)    1  23.0      0      0   \n",
+       "\n",
+       "              Ticket     Fare Cabin Embarked  prediction     numCab  sector  \n",
+       "292    SC/Paris 2163  12.8750     D        C           0  11.465614       4  \n",
+       "327            28551  13.0000     D        S           1  11.465614       4  \n",
+       "473  SC/AH Basle 541  13.7917     D        C           1  11.465614       4  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train4[df_train4.Cabin == 'D']"
    ]
   },
   {
