Append KNN-method
Добавлен результат расчёта способом К-близжайших соседей

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn import metrics\n",
-    "from sklearn.ensemble import ExtraTreesClassifier"
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
@@ -256,16 +257,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7867564534231201"
+       "78.68"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +283,7 @@
     "\n",
     "result.shape\n",
     "#кол-во совпадений предсказаний к общему числу данных\n",
-    "result[result == 0].shape[0] / result.shape[0]"
+    "round(100*result[result == 0].shape[0] / result.shape[0] , 2)"
    ]
   },
   {
@@ -403,20 +404,20 @@
     "error = result - y_train\n",
     "\n",
     "#отношение угаданных и всех сразу\n",
-    "error_A_F_S = error[error == 0].shape[0] / error.shape[0]\n",
+    "error_A_F_S = round(100*error[error == 0].shape[0] / error.shape[0],2)\n",
     "print(error_A_F_S)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6599326599326599\n"
+      "65.99\n"
      ]
     },
     {
@@ -444,20 +445,20 @@
     "\n",
     "error = result - y_train\n",
     "\n",
-    "error_A_F = error[error == 0].shape[0] / error.shape[0]\n",
+    "error_A_F = round(100*error[error == 0].shape[0] / error.shape[0],2)\n",
     "print(error_A_F)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7867564534231201\n"
+      "78.68\n"
      ]
     },
     {
@@ -485,13 +486,13 @@
     "\n",
     "error = result - y_train\n",
     "\n",
-    "error_A_S = error[error == 0].shape[0] / error.shape[0]\n",
+    "error_A_S = round(100*error[error == 0].shape[0] / error.shape[0],2)\n",
     "print(error_A_S)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +501,7 @@
        "array([[-0.0070827 ,  2.42184419]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,14 +513,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7833894500561167\n"
+      "78.34\n"
      ]
     },
     {
@@ -551,20 +552,20 @@
     "result = model.predict(X_train)\n",
     "error = result - y_train\n",
     "\n",
-    "error_Std_S_A = error[error == 0].shape[0] / error.shape[0]\n",
+    "error_Std_S_A = round(100*error[error == 0].shape[0] / error.shape[0],2)\n",
     "print(error_Std_S_A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.30400138 0.23661002 0.4593886 ]\n"
+      "[0.29806858 0.25975525 0.44217617]\n"
      ]
     },
     {
@@ -928,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -942,23 +943,23 @@
     {
      "data": {
       "text/plain": [
-       "0.7833894500561167"
+       "78.34"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model1 = LogisticRegression()\n",
+    "model1 = LogisticRegression(max_iter=1000, dual=False)\n",
     "model1.fit(X_train, y_train)\n",
     "\n",
     "result1 = model1.predict(X_train)\n",
     "\n",
     "error = result1 - y_train\n",
     "\n",
-    "error[error == 0].shape[0] / error.shape[0]"
+    "round(100*error[error == 0].shape[0] / error.shape[0],2)\n"
    ]
   },
   {
@@ -966,6 +967,27 @@
    "metadata": {},
    "source": [
     "По полученным выше данным можно сделать вывод, что логичтическая модель справляется с данными которые мы подготовили с 78.7% точностью."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors = 3)\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "acc_knn = round(knn.score(X_train, y_train) * 100, 2)\n",
+    "print(acc_knn)"
    ]
   },
   {
